tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@import "variables"

@mixin code-style
  *
    font-family: "open sans", "Montserrat", Helvetica, Arial, sans-serif
  pre, code
    font-family: Consolas, "Liberation Mono", Courier, monospace
  h1, h2, h3, h4, h5, h6
    margin-top: 10px
    &:first-child
      margin-top: 10px
  p, th, td, pre, code
    font-size: 12px
    margin-bottom: 10px
  table
    width: 100%
    th, td
      padding: 5px
      text-align: left
  pre
    padding: 10px
  code
    border: 0
    padding: 0
    background-color: transparent
  pre, code
    max-width: 100%
    background-color: #eeeeee
  strong
    font-weight: bold

div[data-tribe-markdown-help]
  > div
    > div.markdown-help-content
      display: none

div.markdown-help-content
  position: fixed
  top: 0
  bottom: 0
  right: 0
  left: 0
  z-index: 3000
  background-color: transparentize(black, .5)
  > div
    position: fixed
    $distance: 40px
    top: $distance
    bottom: $distance
    right: $distance
    left: $distance
    padding: 40px
    overflow: auto
    background-color: white
    @include code-style
    >i.fa.fa-times-circle
      position: absolute
      top: 5px
      right: 5px
      font-family: FontAwesome

div[data-tribe-markdown]
  display: inline-block
  div.CodeMirror, div.CodeMirror-scroll
    min-height: 30px
    max-height: 300px
  div.edit-icon
    opacity: 0
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    padding: 0 5px
    background-color: #f5f5f5
    align-self: stretch
  div.preview
    display: flex
    > div:nth-of-type(1)
      padding: 10px
      min-height: 44px
      border: solid transparent 1px
      flex-grow: 1
      border-right: 0
      > *:last-child
        margin-bottom: 0
    &:hover
      div.edit-icon
        border-left: solid $app-input-border-color 1px
        opacity: 1
  div.value
    display: none
    > div
      border-color: transparent
    div.editor-toolbar
      border-bottom: solid $app-input-border-color 1px
  &.active
    display: block
    div.preview
      display: none
    div.value
      display: block
  div.main
    display: flex
    border: solid transparent 1px
    &:hover
      border-color: $app-input-border-color
    > div
      flex-grow: 1
      width: 50%
    &.sidebyside
      > div
        display: block
  &.active
    div.preview
      &:hover
        div.edit-icon
          opacity: 0
    div.main
      border-color: $app-input-border-color
      > div:last-of-type
        border-left: solid $app-input-border-color 1px
  div.preview > div.empty
    span
      font-style: italic
      color: $app-input-border-color
  div.preview > div[x-ng-bind-html], div.editor-preview
    max-width: 100%
    @include code-style
  > div.fullscreen
    background-color: #ffffff
    position: fixed
    z-index: 4000
    top: 0
    bottom: 0
    left: 0
    right: 0
    div.main
      min-height: 100vh

